Fix liquids price, add checkout overflow

--- a/src/components/Checkout.module.scss
+++ b/src/components/Checkout.module.scss
@@ -2,7 +2,7 @@
 
 .checkout {
   display: block;
-  padding-top: 125px;
+  padding-top: 50px;
   margin-left: auto;
   margin-right: auto;
 
@@ -19,6 +19,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    margin-bottom: 50px;
     button {
       width: 150px;
       background-color: $primaryColor;
@@ -33,6 +34,8 @@
     min-width: 35rem;
     box-shadow: 1px 2px rgba(0, 0, 0, 0.25);
     margin-bottom: 14px;
+    overflow-y: scroll;
+    height: 60vh;
     .productItem:hover {
       box-shadow: 3px 3px 3px 3px $shadow-light;
     }
